--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,3 +19,32 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+ignored = ["github.com/flimzy/kivik*"]
+
+[[constraint]]
+  name = "github.com/flimzy/diff"
+  version = "0.1.3"
+
+[[constraint]]
+  name = "github.com/flimzy/testy"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/go-kivik/couchdb"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/go-kivik/fsdb"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/go-kivik/kivik"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/go-kivik/kiviktest"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/go-kivik/kivikmock"
+  branch = "master"
