--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,13 +6,24 @@ variables:
 
 .test: &test_template
     stage: test
+    services:
+        - apache/couchdb:2.3.1
+    variables:
+        COUCHDB_USER: admin
+        COUCHDB_PASSWORD: abc123
+        KIVIK_TEST_DSN: http://admin:abc123@apache-couchdb:5984/
+    before_script:
+        - curl --silent --fail -o /dev/null -X PUT ${KIVIK_TEST_DSN}/_users
+        - curl --silent --fail -o /dev/null -X PUT ${KIVIK_TEST_DSN}/_replicator
+        - curl --silent --fail -o /dev/null -X PUT ${KIVIK_TEST_DSN}/_global_changes
+        - curl --silent --fail -o /dev/null -X PUT ${KIVIK_TEST_DSN}/_node/nonode@nohost/_config/replicator/interval -d '"1000"'
     script:
         - mkdir -p /go/src
         - ln -s /builds /go/src/gitlab.com
         - cd ${SRCDIR}
         - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
         - dep ensure
-        - go test -race ./...
+        - go test -race -tags=livetest ./...
 
 lint:
     stage: test
