--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables:
         - cd ${SRCDIR}
         - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
         - dep ensure
-        - go test -cover -race ./...
+        - go test -race ./...
 
 lint:
     stage: test
@@ -25,6 +25,17 @@ lint:
         - dep ensure
         - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.17.1
         - golangci-lint run ./...
+
+coverage:
+    stage: test
+    image: golang:1.12
+    script:
+        - mkdir -p /go/src
+        - ln -s /builds /go/src/gitlab.com
+        - cd ${SRCDIR}
+        - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+        - dep ensure
+        - ./script/coverage.sh
 
 go-1.10:
     <<: *test_template
