--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
     - test
 
 variables:
-    SRCDIR: /go/src/gitlab.com/go-kivik/xkivik
+    GO111MODULE: "on"
 
 .test: &test_template
     stage: test
@@ -18,38 +18,21 @@ variables:
         - curl --silent --fail -o /dev/null -X PUT ${KIVIK_TEST_DSN}/_global_changes
         - curl --silent --fail -o /dev/null -X PUT ${KIVIK_TEST_DSN}/_node/nonode@nohost/_config/replicator/interval -d '"1000"'
     script:
-        - mkdir -p /go/src
-        - ln -s /builds /go/src/gitlab.com
-        - cd ${SRCDIR}
         - go test -race -tags=livetest ./...
 
 lint:
     stage: test
-    image: golang:1.12
+    image: golang:1.13
     script:
-        - mkdir -p /go/src
-        - ln -s /builds /go/src/gitlab.com
-        - cd ${SRCDIR}
-        - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-        - dep ensure
-        - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.17.1
+        - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.22.2
+        - go mod download
         - golangci-lint run ./...
 
 coverage:
     stage: test
-    image: golang:1.12
+    image: golang:1.13
     script:
-        - mkdir -p /go/src
-        - ln -s /builds /go/src/gitlab.com
-        - cd ${SRCDIR}
-        - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-        - dep ensure
         - ./script/coverage.sh
-
-go-1.10:
-    <<: *test_template
-    stage: test
-    image: golang:1.10
 
 go-1.11:
     <<: *test_template
@@ -60,6 +43,11 @@ go-1.12:
     <<: *test_template
     stage: test
     image: golang:1.12
+
+go-1.13:
+    <<: *test_template
+    stage: test
+    image: golang:1.13
 
 go-rc:
     <<: *test_template
