--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,10 @@ go-1.13:
     <<: *test_template
     image: golang:1.13
 
+go-1.14:
+    <<: *test_template
+    image: golang:1.14
+
 go-rc:
     <<: *test_template
     image: golang:rc
