--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ lint:
     script:
         - go mod download
         - golangci-lint run ./...
+        - ./script/check-license.sh
 
 coverage:
     stage: test
