--- a/.github/workflows/tags.yaml
+++ b/.github/workflows/tags.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Trigger Job
       uses: appleboy/gitlab-ci-action@master
