--- a/.github/workflows/tags.yaml
+++ b/.github/workflows/tags.yaml
@@ -4,12 +4,12 @@ on:
     tags:
     - v*
 jobs:
-  build:
-    name: Build
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
     - name: Trigger Job
       uses: appleboy/gitlab-ci-action@v0.0.2
       with:
-        token: ${{ secrets.GITLAB_TOKEN }}
+        token: ${{ secrets.GITLAB_CI_TRIGGER_TOKEN }}
         project_id: 13151405
